--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,5 @@
 #ignore
-.metadata
-.myeclipse
-
-*.class
-out
-.idea
-
-Test11
-wycaaaaaaaaaaaaaaaaaaaas
-Test.class
-Test.java
-test*
-Test*
+tgwerfgdfhsdhfghfg
 text*
 Text*
 jbit.log
